fix style: article pars align to left in ltr

--- a/src/components/pages/article page/paragraphs/paragraphs/Paragraphs.module.css
+++ b/src/components/pages/article page/paragraphs/paragraphs/Paragraphs.module.css
@@ -1,5 +1,4 @@
 .paragraphs {
   background-color: inherit;
   margin: 0 auto;
-  text-align: right;
 }
